--- a/fanstage-be/package.json
+++ b/fanstage-be/package.json
@@ -12,21 +12,23 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "@hono/zod-validator": "^0.7.4",
+    "@privy-io/react-auth": "^3.3.0",
+    "@privy-io/server-auth": "^1.32.5",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "helmet": "^8.1.0",
     "hono": "^4.10.1",
     "pg": "^8.16.3",
-    "zod": "^4.1.12",
-    "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "helmet": "^8.1.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@types/node": "^20.19.22",
-    "@types/pg": "^8.15.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/node": "^20.19.22",
+    "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5",
     "install": "^0.13.0",
     "ts-node": "^10.9.2",
