✨ feat: IPFS Integration & On-Chain Artist Registration Flow
This update finalizes the artist registration process by integrating IPFS/Pinata for metadata storage and connects the frontend to the smart contracts via Wagmi hooks for on-chain identity minting.

🖼️ IPFS/Pinata Backend Integration

Service: Introduced the dedicated src/routes/ipfs.ts router using the Pinata SDK to manage decentralized storage.

Endpoints: Added secure, authenticated endpoints for:

POST /ipfs/upload: Server-side file upload (e.g., for profile images).

POST /ipfs/upload-json: Uploading rich metadata (ERC-721 standard) for artist identities.

GET /ipfs/presigned-url: Generating signed URLs for future client-side uploads.

Configuration: Updated .env.example to include all necessary Pinata configuration variables.

Backend Refactor: Updated Hono src/index.ts to expose the new /api/ipfs routes.

🔗 Contract & Frontend Connection

Wagmi Hooks: Created src/services/contracts.ts containing custom Wagmi hooks for all core functions of ArtistIdentity, CampaignRegistry, and MockIDRX contracts (read, write, approval, minting).

Artist Registration Flow: Refactored the RegisterArtist.tsx page to use useArtistRegistration hook, managing the complex multi-step process:

Collect details (Step 1 & 2).

Upload image/metadata to IPFS (Step 3).

Call registerArtist function on the ArtistIdentity contract.

Update backend user role only after the blockchain transaction is confirmed.

ABIs & Addresses: Added contract ABIs (ArtistIdentity.json, CampaignContract.json, etc.) and deployed addresses (addresses.json) for Base Sepolia to the frontend.

Profile Page Update: Refactored Profile.tsx to use the new useProfilePage feature hook for cleaner state management.

Environment: Updated frontend environment files (.env) to use VITE_API_BASE_URL for flexible API connection.

--- a/fanstage-be/.env.example
+++ b/fanstage-be/.env.example
@@ -16,6 +16,12 @@ RPC_URL=https://mainnet.infura.io/v3/your-infura-project-id
 IPFS_PROJECT_ID=your-ipfs-project-id
 IPFS_PROJECT_SECRET=your-ipfs-project-secret
 
+# Pinata Configuration
+PINATA_API_KEY=your-pinata-api-key
+PINATA_API_SECRET=your-pinata-api-secret
+PINATA_JWT=your-pinata-jwt-token
+PINATA_GATEWAY_URL=your-gateway-domain.mypinata.cloud
+
 # Privy Configuration
 PRIVY_APP_ID=your-privy-app-id
 PRIVY_APP_SECRET=your-privy-app-secret
