--- a/fanstage-fe/.env.example
+++ b/fanstage-fe/.env.example
@@ -1,3 +1,6 @@
 # Privy Configuration
-PRIVY_APP_ID=your_privy_app_id_here
+VITE_PRIVY_APP_ID=your_privy_app_id_here
 PRIVY_APP_SECRET=your_privy_app_secret_here
+
+# API Configuration
+VITE_API_BASE_URL=http://localhost:3001/api
