--- a/fanstage-be/package.json
+++ b/fanstage-be/package.json
@@ -22,6 +22,7 @@
     "helmet": "^8.1.0",
     "hono": "^4.10.1",
     "pg": "^8.16.3",
+    "pinata": "^2.5.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
